--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 
 logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+springdoc.swagger-ui.path=/swagger-ui.html
