--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/show_do_milhao
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-directory.root=C:/Users/soare/OneDrive/Documentos/GitHub/show-do-milhao/backend/src/main/resources
-directory.file=arquivos
 
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 
 logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
 
-api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.show_do_milhao.token.secret=${JWT_SECRET:my_token_secret}
 
 springdoc.swagger-ui.path=/swagger-ui.html
+
+amazon.s3.region=us-east-1
+amazon.s3.secret.key=${S3_ACESS_TOKEN:my-secret-key}
+amazon.s3.acess.key=${S3_ACESS_TOKEN:my-cess-key}
+amazon.s3.bucket=${S3_BUCKET:bucket}
