--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout do Código
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
