--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install
     - name: Copiar JAR para a Instância EC2
       uses: appleboy/scp-action@master
       with:
