--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Checkout do Código
       uses: actions/checkout@v3
+      with:
+        path: 'backend'
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
