--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,15 +9,13 @@ jobs:
     steps:
     - name: Checkout do Código
       uses: actions/checkout@v3
-      with:
-        path: 'backend'
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn -f backend/pom.xml clean install
     - name: Copiar JAR para a Instância EC2
       uses: appleboy/scp-action@master
       with:
