--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,15 +19,13 @@ jobs:
     - name: Copiar JAR para a Instância EC2
       uses: appleboy/scp-action@master
       env:
-        HOST: ${{ secrets.AWS_EC2_HOST }}
-        USERNAME: ${{ secrets.AWS_EC2_USER }}
-        PORT: "22"
-        KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-      with:
-        source: "/target/showdomilhao-0.0.1-SNAPSHOT.jar"
-        target: "/home/ec2-user"
+        SSH_PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+        SOURCE: "/target/showdomilhao-0.0.1-SNAPSHOT.jar"
+        REMOTE_HOST: ${{ secrets.AWS_EC2_HOST }}
+        REMOTE_USER: ${{ secrets.AWS_EC2_USER }}
+        TARGET: "/home/ec2-user"
     - name: SSH para a Instância EC2 e Iniciar Aplicação
-      uses: appleboy/ssh-action@master
+      uses: easingthemes/ssh-deploy@v2.1.5
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
         username: ${{ secrets.AWS_EC2_USER }}
