--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,20 +16,14 @@ jobs:
         distribution: 'temurin'
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
-    - name: Copiar JAR para a Instância EC2
-      uses: appleboy/scp-action@master
-      env:
+    - name: SSH para a Instância EC2 e Iniciar Aplicação
+      uses: easingthemes/ssh-deploy@main
+      with:
         SSH_PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
         SOURCE: "/target/showdomilhao-0.0.1-SNAPSHOT.jar"
         REMOTE_HOST: ${{ secrets.AWS_EC2_HOST }}
         REMOTE_USER: ${{ secrets.AWS_EC2_USER }}
         TARGET: "/home/ec2-user"
-    - name: SSH para a Instância EC2 e Iniciar Aplicação
-      uses: easingthemes/ssh-deploy@v2.1.5
-      with:
-        host: ${{ secrets.AWS_EC2_HOST }}
-        username: ${{ secrets.AWS_EC2_USER }}
-        key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
         envs: | 
           MYSQL_HOST=${{secrets.MYSQL_HOST}}
           MYSQL_USERNAME=${{secrets.MYSQL_USERNAME}}
