--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
     - name: SSH para a Instância EC2 e Iniciar Aplicação
-      uses: easingthemes/ssh-deploy@main
+      uses: appleboy/scp-action@master
       with:
         SSH_PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
         SOURCE: "/target/showdomilhao-0.0.1-SNAPSHOT.jar"
