--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,14 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
+        envs: | 
+          MYSQL_HOST=${{secrets.MYSQL_HOST}}
+          MYSQL_USERNAME=${{secrets.MYSQL_USERNAME}}
+          MYSQL_PASSWORD=${{secrets.MYSQL_PASSWORD}}
+          JWT_SECRET=${{secrets.JWT_SECRET}}
+          S3_BUCKET=${{secrets.S3_BUCKET}}
+          S3_ACESS_TOKEN=${{secrets.S3_ACESS_TOKEN}}
+          S3_SECRET_KEY=${{secrets.S3_SECRET_KEY}}
         script: |
           # Parar a aplicação se já estiver em execução
           pkill -f showdomilhao-0.0.1-SNAPSHOT.jar || true
