--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,9 @@ jobs:
         distribution: 'temurin'
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
-    - name: SSH para a Instância EC2 e Iniciar Aplicação
+    - name: Exibir Conteúdo do Arquivo JAR
+      run: unzip -l target/sua-aplicacao.jar
+    - name: copiar .jar para a Instância EC2
       uses: appleboy/scp-action@v0.1.4
       with:
         password: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
