--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
     - name: Exibir Conteúdo do Arquivo JAR
-      run: unzip -l target/showdomilhao-0.0.1-SNAPSHOT.jar
+      run: ls
     - name: copiar .jar para a Instância EC2
       uses: appleboy/scp-action@v0.1.4
       with:
