--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       uses: appleboy/scp-action@v0.1.4
       with:
         password: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-        source: "/target/showdomilhao-0.0.1-SNAPSHOT.jar"
+        source: "backend/target/showdomilhao-0.0.1-SNAPSHOT.jar"
         host: ${{ secrets.AWS_EC2_HOST }}
         username: ${{ secrets.AWS_EC2_USER }}
         target: "/home/ec2-user"
