--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,13 @@ jobs:
     - name: Exibir Conteúdo do Arquivo JAR
       run: ls
     - name: copiar .jar para a Instância EC2
-      run: rsync -e "ssh -i ${{ secrets.AWS_EC2_PRIVATE_KEY }}" -av backend/target/showdomilhao-0.0.1-SNAPSHOT.jar ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }}:/home/ec2-user/
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        password: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+        source: "backend/target/showdomilhao-0.0.1-SNAPSHOT.jar"
+        host: ${{ secrets.AWS_EC2_HOST }}
+        username: ${{ secrets.AWS_EC2_USER }}
+        target: "/home/ec2-user"
     - name: SSH para a Instância EC2 e Iniciar Aplicação
       uses: appleboy/ssh-action@v1.0.0
       with:
