--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
         echo "${{ secrets.AWS_EC2_PRIVATE_KEY }}" > private_key.pem
         chmod 600 private_key.pem
         cat private_key.pem
-        ssh -v -i private_key.pem ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }} "echo Test SSH"
+        ssh -i private_key.pem ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }}
     - name: copiar .jar para a Instância EC2
       uses: appleboy/scp-action@v0.1.4
       with:
