--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
         REMOTE_HOST: ${{ secrets.AWS_EC2_HOST }}
         REMOTE_USER: ${{ secrets.AWS_EC2_USER }}
-        TARGET: "target/showdomilhao-0.0.1-SNAPSHOT.jar"
+        TARGET: "home/ec2-user"
     - name: SSH para a Instância EC2 e Iniciar Aplicação
       uses: appleboy/ssh-action@master
       with:
