--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,12 +17,19 @@ jobs:
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
     - name: copiar .jar para a Instância EC2
-      uses: easingthemes/ssh-deploy@main
+      # uses: easingthemes/ssh-deploy@main
+      # with:
+      #   SSH_PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+      #   REMOTE_HOST: ${{ secrets.AWS_EC2_HOST }}
+      #   REMOTE_USER: ${{ secrets.AWS_EC2_USER }}
+      #   TARGET: "home/ec2-user"
+      uses: appleboy/scp-action@master
       with:
-        SSH_PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-        REMOTE_HOST: ${{ secrets.AWS_EC2_HOST }}
-        REMOTE_USER: ${{ secrets.AWS_EC2_USER }}
-        TARGET: "home/ec2-user"
+        host: ${{ secrets.AWS_EC2_HOST }}
+        username: ${{ secrets.AWS_EC2_USER }}
+        key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+        source: "target/showdomilhao-0.0.1-SNAPSHOT.jar"
+        target: "/home/ec2-user"
     - name: SSH para a Instância EC2 e Iniciar Aplicação
       uses: appleboy/ssh-action@master
       with:
