--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         host: ${{ secrets.AWS_EC2_HOST }}
         username: ${{ secrets.AWS_EC2_USER }}
         key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-        source: "target/showdomilhao-0.0.1-SNAPSHOT.jar"
+        source: "backend/target/showdomilhao-0.0.1-SNAPSHOT.jar"
         target: "/home/ec2-user"
     - name: SSH para a Instância EC2 e Iniciar Aplicação
       uses: appleboy/ssh-action@master
