--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,5 @@ amazon.s3.region=us-east-1
 amazon.s3.secret.key=${S3_ACESS_TOKEN:my-secret-key}
 amazon.s3.acess.key=${S3_ACESS_TOKEN:my-cess-key}
 amazon.s3.bucket=${S3_BUCKET:bucket}
+
+api.show_do_milhao.test=host: ${MYSQL_HOST:teste}
