--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,18 @@ jobs:
         host: ${{ secrets.AWS_EC2_HOST }}
         username: ${{ secrets.AWS_EC2_USER }}
         key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+        envs: | 
+          MYSQL_HOST=${{secrets.MYSQL_HOST}}
+          MYSQL_USERNAME=${{secrets.MYSQL_USERNAME}}
+          MYSQL_PASSWORD=${{secrets.MYSQL_PASSWORD}}
+          JWT_SECRET=${{secrets.JWT_SECRET}}
+          S3_BUCKET=${{secrets.S3_BUCKET}}
+          S3_ACESS_TOKEN=${{secrets.S3_ACESS_TOKEN}}
+          S3_SECRET_KEY=${{secrets.S3_SECRET_KEY}}
         script: |
           # Parar a aplicação se já estiver em execução
           pkill -f showdomilhao-0.0.1-SNAPSHOT.jar || true
           # Iniciar a aplicação
-          nohup java -jar backend/target/showdomilhao-0.0.1-SNAPSHOT.jar > output.log 2>&1 &
-          sleep 10
-          cat output.log
+          java -jar backend/target/showdomilhao-0.0.1-SNAPSHOT.jar > log.txt 2>&1 &
+    - name: Exibir Logs
+      run: cat log.txt
