--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
           # Parar a aplicação se já estiver em execução
           pkill -f showdomilhao-0.0.1-SNAPSHOT.jar || true
           # Iniciar a aplicação
-          java -jar backend/target/showdomilhao-0.0.1-SNAPSHOT.jar > log.txt 2>&1 &
+          cp backend/target/showdomilhao-0.0.1-SNAPSHOT.jar backend/target/
+          sudo systemctl start showdomilhao.service
     - name: Exibir Logs
       run: cat log.txt
