--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
           # Parar a aplicação se já estiver em execução
           pkill -f showdomilhao-0.0.1-SNAPSHOT.jar || true
           # Iniciar a aplicação
-          cp backend/target/showdomilhao-0.0.1-SNAPSHOT.jar backend/target/
+          cp backend/target/showdomilhao-0.0.1-SNAPSHOT.jar /opt/showdomilhao/
           sudo systemctl start showdomilhao.service
     - name: Exibir Logs
       run: cat log.txt
