--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:api-show-do-milhao.ckz7qsfex2oz.us-east-1.rds.amazonaws.com}/show_do_milhao
-spring.datasource.username=admin
-spring.datasource.password=qPS4c8xNsjNKmNLk
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.servlet.multipart.max-file-size=30MB
@@ -16,5 +16,3 @@ amazon.s3.region=us-east-1
 amazon.s3.secret.key=${S3_ACESS_TOKEN:my-secret-key}
 amazon.s3.acess.key=${S3_ACESS_TOKEN:my-cess-key}
 amazon.s3.bucket=${S3_BUCKET:bucket}
-
-api.show_do_milhao.test=host: ${MYSQL_HOST:teste}
