--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,12 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+    - name: Substituir valores no arquivo .properties
+      run: |
+        sed -i 's/jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao/jdbc:mysql://${{secrets.MYSQL_HOST}}/show_do_milhao/g' src/main/resources/application.properties
+        sed -i 's/${MYSQL_USERNAME:root}/${{secrets.MYSQL_PASSWORD}}/g' src/main/resources/application.properties
+        sed -i 's/${MYSQL_PASSWORD:root}/${{secrets.MYSQL_PASSWORD}}/g' src/main/resources/application.properties
+        
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
     - name: copiar .jar para a Instância EC2
@@ -30,19 +36,10 @@ jobs:
         host: ${{ secrets.AWS_EC2_HOST }}
         username: ${{ secrets.AWS_EC2_USER }}
         key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-        envs: | 
-          MYSQL_HOST=${{secrets.MYSQL_HOST}}
-          MYSQL_USERNAME=${{secrets.MYSQL_USERNAME}}
-          MYSQL_PASSWORD=${{secrets.MYSQL_PASSWORD}}
-          JWT_SECRET=${{secrets.JWT_SECRET}}
-          S3_BUCKET=${{secrets.S3_BUCKET}}
-          S3_ACESS_TOKEN=${{secrets.S3_ACESS_TOKEN}}
-          S3_SECRET_KEY=${{secrets.S3_SECRET_KEY}}
         script: |
           # Parar a aplicação se já estiver em execução
           pkill -f showdomilhao-0.0.1-SNAPSHOT.jar || true
           # Iniciar a aplicação
-          cp backend/target/showdomilhao-0.0.1-SNAPSHOT.jar /opt/showdomilhao/
           sudo systemctl start showdomilhao.service
     - name: Exibir Logs
       run: cat log.txt
