--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,10 @@ jobs:
         distribution: 'temurin'
     - name: Substituir valores no arquivo .properties
       run: |
-        sed -i 's/jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao/jdbc:mysql://${{secrets.MYSQL_HOST}}/show_do_milhao/g' src/main/resources/application.properties
-        sed -i 's/${MYSQL_USERNAME:root}/${{secrets.MYSQL_PASSWORD}}/g' src/main/resources/application.properties
-        sed -i 's/${MYSQL_PASSWORD:root}/${{secrets.MYSQL_PASSWORD}}/g' src/main/resources/application.properties
-        
+              sed -i 's|spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao|spring.datasource.url=jdbc:mysql://${{secrets.MYSQL_HOST}}/show_do_milhao|g' src/main/resources/application.properties
+              sed -i 's|spring.datasource.username=${MYSQL_USERNAME:root}|spring.datasource.username=${{secrets.MYSQL_USERNAME}}|g' src/main/resources/application.properties
+              sed -i 's|spring.datasource.password=${MYSQL_PASSWORD:root}|spring.datasource.password=${{secrets.MYSQL_PASSWORD}}|g' src/main/resources/application.properties
+
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
     - name: copiar .jar para a Instância EC2
