--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,26 +7,29 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout do Código
+    - name: Code checkout
       uses: actions/checkout@v3
+      
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
+        
     - name: Replace values in the .properties file
       run: |
-              sed -i 's|spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao|spring.datasource.url=jdbc:mysql://${{secrets.MYSQL_HOST}}/show_do_milhao|g' backend/src/main/resources/application.properties
-              sed -i 's|spring.datasource.username=${MYSQL_USERNAME:root}|spring.datasource.username=${{secrets.MYSQL_USERNAME}}|g' backend/src/main/resources/application.properties
-              sed -i 's|spring.datasource.password=${MYSQL_PASSWORD:root}|spring.datasource.password=${{secrets.MYSQL_PASSWORD}}|g' backend/src/main/resources/application.properties
-              sed -i 's|api.show_do_milhao.token.secret=${JWT_SECRET:my_token_secret}|api.show_do_milhao.token.secret=${{secrets.JWT_SECRET}}|g' backend/src/main/resources/application.properties
-              sed -i 's|amazon.s3.secret.key=${S3_ACESS_TOKEN:my-secret-key}|amazon.s3.secret.key=${{secrets.S3_SECRET_KEY}}|g' backend/src/main/resources/application.properties
-              sed -i 's|amazon.s3.acess.key=${S3_ACESS_TOKEN:my-cess-key}|amazon.s3.acess.key=${{secrets.S3_ACESS_TOKEN}}|g' backend/src/main/resources/application.properties
-              sed -i 's|amazon.s3.bucket=${S3_BUCKET:bucket}|amazon.s3.bucket=${{secrets.S3_BUCKET}}|g' backend/src/main/resources/application.properties
-
+        sed -i 's|spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao|spring.datasource.url=jdbc:mysql://${{secrets.MYSQL_HOST}}/show_do_milhao|g' backend/src/main/resources/application.properties
+        sed -i 's|spring.datasource.username=${MYSQL_USERNAME:root}|spring.datasource.username=${{secrets.MYSQL_USERNAME}}|g' backend/src/main/resources/application.properties
+        sed -i 's|spring.datasource.password=${MYSQL_PASSWORD:root}|spring.datasource.password=${{secrets.MYSQL_PASSWORD}}|g' backend/src/main/resources/application.properties
+        sed -i 's|api.show_do_milhao.token.secret=${JWT_SECRET:my_token_secret}|api.show_do_milhao.token.secret=${{secrets.JWT_SECRET}}|g' backend/src/main/resources/application.properties
+        sed -i 's|amazon.s3.secret.key=${S3_ACESS_TOKEN:my-secret-key}|amazon.s3.secret.key=${{secrets.S3_SECRET_KEY}}|g' backend/src/main/resources/application.properties
+        sed -i 's|amazon.s3.acess.key=${S3_ACESS_TOKEN:my-cess-key}|amazon.s3.acess.key=${{secrets.S3_ACESS_TOKEN}}|g' backend/src/main/resources/application.properties
+        sed -i 's|amazon.s3.bucket=${S3_BUCKET:bucket}|amazon.s3.bucket=${{secrets.S3_BUCKET}}|g' backend/src/main/resources/application.properties
+              
     - name: Build with Maven
       run: mvn -f backend/pom.xml clean install
-    - name: copy .jar to EC2 Instance
+      
+    - name: Copy .jar to EC2 Instance
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
@@ -34,6 +37,7 @@ jobs:
         key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
         source: "backend/target/showdomilhao-0.0.1-SNAPSHOT.jar"
         target: "/home/ec2-user"
+        
     - name: Launch Application
       uses: actions/checkout@v4
       env:
