--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao
-spring.datasource.username=${MYSQL_USERNAME:root}
-spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.datasource.url=jdbc:mysql://localhost:3306/show_do_milhao
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.servlet.multipart.max-file-size=30MB
@@ -8,11 +8,11 @@ spring.servlet.multipart.max-request-size=30MB
 
 logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
 
-api.show_do_milhao.token.secret=${JWT_SECRET:my_token_secret}
+api.show_do_milhao.token.secret=my_token_secret
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
 amazon.s3.region=us-east-1
-amazon.s3.secret.key=${S3_ACESS_TOKEN:my-secret-key}
-amazon.s3.acess.key=${S3_ACESS_TOKEN:my-cess-key}
-amazon.s3.bucket=${S3_BUCKET:bucket}
+amazon.s3.secret.key=my-secret-key
+amazon.s3.acess.key=my-cess-key
+amazon.s3.bucket=bucket
