--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          
+      - name: Entering the folder frontend
+        run: cd frontend
 
       - name: Install Dependencies
         run: npm install
@@ -69,7 +72,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: build
-          path: dist/show-do-milhao/
+          path: frontend/dist/show-do-milhao/
           if-no-files-found: error
   deploy-front:
     runs-on: ubuntu-latest
@@ -79,7 +82,7 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: build
-          path: dist/show-do-milhao/
+          path: frontend/dist/show-do-milhao/
 
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
