--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,15 +58,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          
-      - name: Entering the folder frontend
-        run: cd /home/runner/work/show-do-milhao/show-do-milhao/frontend/
-
-      - name: teste
-        run: ls
 
       - name: Install Dependencies
-        run: npm install
+        run: cd frontend/ & npm install
 
       - name: Build Angular Project
         run: npm run build
