--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
           node-version: '20'
 
       - name: Install Dependencies
-        run: cd frontend/ & npm install
+        run: npm install \frontend
 
       - name: Build Angular Project
         run: npm run build
