--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: build
-          path: dist/show-do-milhao/
+          path: frontend/dist/show-do-milhao/
           if-no-files-found: error
   deploy:
     runs-on: ubuntu-latest
@@ -41,15 +41,15 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: build
-          path: dist/show-do-milhao/
+          path: frontend/dist/show-do-milhao/
 
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.S3_ACESS_TOKEN }}
+          aws-secret-access-key: ${{ secrets.S3_SECRET_KEY }}
           aws-region: us-east-1
 
       - name: Deploy to S3
         run: |
-          aws s3 sync ./dist/show-do-milhao s3://api-show-do-milhao-bucket/
+          aws s3 sync ./frontend/dist/show-do-milhao s3://api-show-do-milhao-bucket/
