--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/show_do_milhao
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost:3306}/show_do_milhao
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.jpa.show-sql= true
 
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 
-api.show_do_milhao.token.secret=my_token_secret
+api.show_do_milhao.token.secret=${JWT_SECRET:my_token_secret}
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
