--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync ./frontend/dist/show-do-milhao s3://api-show-do-milhao-bucket/
+          aws s3 sync ./frontend/dist/show-do-milhao s3://${{ secrets.S3_BUCKET }}/
           
   deploy-back:
     runs-on: ubuntu-latest
