feat: configurando nome do bucket

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,6 @@ api.show_do_milhao.token.secret=${JWT_SECRET:my_token_secret}
 springdoc.swagger-ui.path=/swagger-ui.html
 
 amazon.s3.region=us-east-1
-amazon.s3.bucket=bucket
+amazon.s3.bucket=show-do-milhao.lucassoaresdev.com.br
 
 server.port = 9000
